--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.1",
+    "cors": "^2.8.4",
+    "express": "^4.15.4",
+    "morgan": "^1.8.2"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
