--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,10 @@
     "body-parser": "^1.18.1",
     "cors": "^2.8.4",
     "express": "^4.15.4",
-    "morgan": "^1.8.2"
+    "joi": "^11.0.1",
+    "morgan": "^1.8.2",
+    "sequelize": "^4.8.4",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
