--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "joi": "^11.0.1",
+    "jsonwebtoken": "^8.0.1",
     "morgan": "^1.8.2",
     "sequelize": "^4.8.4",
     "sqlite3": "^3.1.8"
